--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <div class="toolbar">
                 <div class="color"></div>
                 <div class="buttons">
+                    <button class="btn" id="reset" onclick="fetchColors()">Reload Colors <i class="ri-refresh-line"></i></button>
                     <button class="btn" id="reset" onclick="reset()">Reset <i class="ri-refresh-line"></i></button>
-                    <button class="btn" id="random">Random Color <i class="ri-recycle-line"></i></button>
+                    <button class="btn" id="random" onclick="random()">Random Color <i class="ri-recycle-line"></i></button>
                     <button class="btn" id="eraser" onclick="eraser()">Eraser <i class="ri-eraser-line"></i></button>
                     <button class="btn" id="save" onclick="save()">Download <i class="ri-download-line"></i></button>
                 </div>
