--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <button class="btn" id="reset" onclick="fetchColors()">Reload Colors <i class="ri-refresh-line"></i></button>
                     <button class="btn" id="reset" onclick="reset()">Reset <i class="ri-refresh-line"></i></button>
                     <button class="btn" id="random" onclick="random()">Random Color <i class="ri-recycle-line"></i></button>
-                    <button class="btn" id="eraser" onclick="eraser()">Eraser <i class="ri-eraser-line"></i></button>
+                    <button class="btn" id="eraser" onclick="changeColor('rgb(255,255,255)')">Eraser <i class="ri-eraser-line"></i></button>
                     <button class="btn" id="save" onclick="save()">Download <i class="ri-download-line"></i></button>
                 </div>
             </div>
